# loom

./: .gitignore  .mcp.json  INSTALL.md  README.md  loom_assemble.sh  opencode.json
.github/workflows/: ci.yml
client/: .npmrc  package.json  pnpm-lock.yaml
client/scripts/: loom_materialize.ts  m0_check.ts  m2_matrix.ts  parse_check.ts  t11_can_run.sh  t12_e2e.ts  t8_dirty_converge.ts  t8_dirty_thrash.ts  t8_repair.ts  t9_runner.ts  t_outcomes_attribution.ts
client/src/: contracts.ts  fromZero.ts  gate.ts  injectEnv.ts  llm.ts  loadCandidates.ts  materialize.ts  outcomes.ts  repair.ts
core/: loom.core.json
docs/: HANDOFF.md  T8-doubt-register.md  agent-native-vision-assessment.md  architecture-v2.md  assembly-blueprint.md  benchmark.md  evolution-design.md  experiment-plan.md  idea-evaluation.md  implementation-plan.md  pool-density-experiment.md  refined-concept.md  similar-projects.md
fixtures/: assembly-plan.sample.json  gradient-proposal.sample.json
ideas/: blog-platform.json  contact-book-with-google-auth.json  project-manager.json  saas-admin-with-google-auth.json  task-tracker-with-github-auth.json
ideas/oracle/: oracle-plan-contact-book-with-google-auth.json  oracle-plan-saas-admin-with-google-auth.json  (+1 more)
platform/: README.md  _paths.py  analyze_repo.py  backfill_tradeoffs.py  bench_remote.py  bench_report.py  demo_saas.py  embedding.py  eval_flywheel.py  eval_honest.py  eval_mcp_e2e.py  eval_pool_density.py  eval_propose.py  eval_retrieval.py  eval_scale.py  eval_thirdparty.py  eval_writeown.py  eval_wtrust.py  export_schemas.py  flywheel.py  gen_seed.py  get_files.py  honest_report.py  infer_seam.py  ingest.py  load_candidates.py  loom_contracts.py  loom_entry.py  m2_verdict.py  mcp_server.py  memory_backend.py  plan_from_choices.py  propose.py  pyproject.toml  retrieve.py  run_compare.py  run_select.py  seed_pool.py  test_e2e_journey.py  test_evolution.py  (+2 more)
platform/loom_seed/: loom.core.json  seed_data.json
platform/loom_seed/t3-base/: package.json  pnpm-lock.yaml
platform/loom_seed/t3-base/src/server/auth/: config.ts
schema/: assembly-metrics.schema.json  assembly-plan.schema.json  core-manifest.schema.json  diagnostic.schema.json  l0-candidate.schema.json  l1-signature.schema.json  l2-fulltext.schema.json  lockfile.schema.json  manifest.schema.json  registry-item.schema.json
(+84 files in other folders)
