[project]
name = "loom-platform"
version = "0.1.0"
description = "Loom 平台侧：选择引擎 / 披露式展开 / 契约"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40",
    "fastembed>=0.8.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-typescript>=0.23.2",
    "mcp>=1.2",
    "openai>=1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
