[project]
name = "loom-mcp"
version = "0.2.1"
description = "Loom MCP — AI 编程的肌肉记忆,从你自己的代码库检索-组装新项目"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40",
    "fastembed>=0.8.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-typescript>=0.23.2",
    "mcp>=1.2",
    "openai>=1.0",
    "tokenizers==0.22.2",
]

[project.scripts]
loom-mcp = "loom_entry:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
